# redeye

./: .gitignore  CMakeLists.txt  build.sh  build_debug.sh  build_release.sh  clean.sh  redeye.cc  test.cc
inc/: cbzfile.h  magickwand_image.h  main_form.h
src/: cbzfile.cc  magickwand_image.cc  main_form.cc
